<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movile.next.seriestracker.fragments.ShowInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/show_summary_card"
            style="@style/AppTheme.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/AppTheme.Card.Content">

                <TextView
                    android:text="@string/summary_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CardTitle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/AppTheme.CardSeparator" />

                <TextView android:id="@+id/show_summary_text"
                    android:text="@string/text_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CardText"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/show_genres_card"
            style="@style/AppTheme.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/AppTheme.Card.Content">

                <TextView
                    android:text="@string/genres_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CardTitle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/AppTheme.CardSeparator" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView android:id="@+id/show_genre_text"
                        android:text="@string/genre_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.ShowDetails.GenreText"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/show_details_card"
            style="@style/AppTheme.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/AppTheme.Card.Content">

                <TextView
                    android:text="@string/details_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CardTitle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/AppTheme.CardSeparator" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/network_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText.ItemLabel"/>

                    <TextView android:id="@+id/show_network_text"
                        android:text="@string/network_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="@string/status_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText.ItemLabel"/>

                    <TextView android:id="@+id/show_status_text"
                        android:text="@string/status_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/episodes_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText.ItemLabel"/>

                    <TextView android:id="@+id/show_episodes_text"
                        android:text="@string/episodes_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/year_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText.ItemLabel"/>

                    <TextView android:id="@+id/show_year_text"
                        android:text="@string/year_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/country_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText.ItemLabel"/>

                    <TextView android:id="@+id/show_country_text"
                        android:text="@string/country_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/language_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText.ItemLabel"/>

                    <TextView android:id="@+id/show_language_text"
                        android:text="@string/language_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CardText" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
